--- a/LightMasterMVVM/LightMasterMVVM/Views/CompetitionTeams.xaml
+++ b/LightMasterMVVM/LightMasterMVVM/Views/CompetitionTeams.xaml
@@ -8,11 +8,32 @@
     <ItemsControl Items="{Binding Teams}">
       <ItemsControl.ItemTemplate>
         <DataTemplate>
-          <Border Background="#eeeeee" BorderBrush="LightGray" BorderThickness="1">
-            <Grid ColumnDefinitions="60,*">
-              <TextBlock Text="{Binding team_number}" Grid.Column="0"/>
-              <TextBlock Text="WHO LIVES IN A PINEAPPLE UNDER THE SEA SPONGEBOB SQUAREPANTS UWU" Grid.Column="1"/>
-            </Grid>
+          <Border Background="#eeeeee" BorderBrush="LightGray" BorderThickness="1" Padding="10">
+              <StackPanel>
+                  <Grid ColumnDefinitions="60,200,*,200">
+                      <TextBlock Text="{Binding team_number}" Grid.Column="0"/>
+                      <TextBlock Text="{Binding match_progress}" Grid.Column="1"/>
+                      <TextBlock Text="SHALALALALALAL MY OH MY DONT LET THE BOY BE SHY YOU GOTTA SING THE RIGHT WORDS" Grid.Column="2"/>
+                      <Button Content="See More Details..." Grid.Column="3"/>
+              
+                  </Grid>
+                  <ItemsControl Items="{Binding team_matches}">
+                      <ItemsControl.ItemTemplate>
+                          <DataTemplate>
+                              <Border Background="LightBlue" BorderBrush="Gray" Padding="3">
+                                  <Grid ColumnDefinitions="100,50,50,50,50">
+                                      <TextBlock Text="{Binding MatchNumber, StringFormat={}Match {0}}}" Grid.Column="0"/>
+                                      <TextBlock Text="{Binding APowerCellInner, StringFormat={}{0}PC}}" Grid.Column="1"/>
+                                      <TextBlock Text="{Binding APowerCellInner, StringFormat={}{0}PC}}" Grid.Column="2"/>
+                                      <TextBlock Text="{Binding APowerCellInner, StringFormat={}{0}PC}}" Grid.Column="3"/>
+                                      <TextBlock Text="{Binding APowerCellInner, StringFormat={}{0}PC}}" Grid.Column="4"/>
+                                  </Grid>
+                              </Border>
+                          </DataTemplate>
+                      </ItemsControl.ItemTemplate>
+                  </ItemsControl>
+              </StackPanel>
+            
           </Border>
           
         </DataTemplate>
